tests/ui/rfcs/rfc-2632-const-trait-impl/without-tilde.stderr
error: const bounds must start with `~`
  --> $DIR/without-tilde.rs:5:13
   |
LL | struct S<T: const Tr>;
   |             -^^^^
   |             |
   |             help: add `~`: `~`

error: aborting due to previous error

